<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.uni_hannover.inma.MainActivity$PlaceholderFragment"
    android:background="@android:color/background_light" >

    <TextView
        android:id="@+id/helpText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/helptext1"
        android:textSize="@dimen/help_big_font" />

    <TextView
        android:id="@+id/helpText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/helpText1"
        android:layout_below="@+id/helpText1"
        android:layout_marginTop="14dp"
        android:text="@string/helptext2" />

    <TextView
        android:id="@+id/helpText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/helpText1"
        android:layout_below="@+id/helpText2"
        android:layout_marginTop="20dp"
        android:text="@string/helptext3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/helpText1"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/increase" 
            android:onClick="increase"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_tag" 
            android:onClick="addTag"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_map" 
            android:onClick="showMap"/>
    </LinearLayout>

</RelativeLayout>