<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.uni_hannover.inma.MainActivity" >

    <item
        android:id="@+id/action_add_tag"
        android:orderInCategory="10"
        android:title="@string/add_tag"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_edit_map"
        android:orderInCategory="20"
        android:title="@string/paint"
        android:icon="@drawable/ic_action_edit"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_send_data"
        android:orderInCategory="30"
        android:title="@string/right"
        android:icon="@drawable/ic_action_accept"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
