<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.uni_hannover.inma.MainActivity$PlaceholderFragment"
    android:background="@android:color/background_light" >

    <TextView
        android:id="@+id/startText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/starttext1"
        android:textSize="@dimen/help_big_font" />

    <TextView
        android:id="@+id/startText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startText1"
        android:layout_below="@+id/startText1"
        android:layout_marginTop="14dp"
        android:text="@string/starttext2" />

    <TextView
        android:id="@+id/startText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startText1"
        android:layout_below="@+id/startText2"
        android:layout_marginTop="20dp"
        android:text="@string/starttext3" />

    <TextView
        android:id="@+id/startText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startText1"
        android:layout_below="@+id/startText3"
        android:layout_marginTop="20dp"
        android:text="@string/starttext4" />

</RelativeLayout>